--- a/train.ipynb
+++ b/train.ipynb
@@ -3075,8 +3075,251 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "66215537-771e-4b09-8f73-6fdd5fc57d57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Feature Id</th>\n",
+       "      <th>Importances</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>user_item_freq</td>\n",
+       "      <td>11.806684</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>user_item_quantity_per_baskter</td>\n",
+       "      <td>9.220793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>user_item_total_sales</td>\n",
+       "      <td>6.785993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>total_item_sales_value</td>\n",
+       "      <td>6.720561</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>item_freq</td>\n",
+       "      <td>5.708848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>commodity_desc</td>\n",
+       "      <td>5.316249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>user_item_quantity_per_week</td>\n",
+       "      <td>4.872310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>user_id</td>\n",
+       "      <td>4.562465</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>user_item_total_quantity</td>\n",
+       "      <td>4.177230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>item_quantity_per_week</td>\n",
+       "      <td>3.422991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>total_user_sales_value</td>\n",
+       "      <td>3.333841</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>item_id</td>\n",
+       "      <td>3.253300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>sub_commodity_desc</td>\n",
+       "      <td>3.207282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>total_quantity_value</td>\n",
+       "      <td>3.128587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>user_freq</td>\n",
+       "      <td>2.729735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>manufacturer</td>\n",
+       "      <td>2.503697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>department</td>\n",
+       "      <td>2.361927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>item_freq_per_basket</td>\n",
+       "      <td>2.303468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>user_quantity_per_week</td>\n",
+       "      <td>2.052122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>item_quantity_per_basket</td>\n",
+       "      <td>2.016049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>curr_size_of_product</td>\n",
+       "      <td>1.940334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>income_desc</td>\n",
+       "      <td>1.055006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>age_desc</td>\n",
+       "      <td>1.044350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>hh_comp_desc</td>\n",
+       "      <td>1.032909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>user_freq_per_basket</td>\n",
+       "      <td>1.020646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>brand</td>\n",
+       "      <td>0.956119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>user_quantity_per_baskter</td>\n",
+       "      <td>0.837939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>homeowner_desc</td>\n",
+       "      <td>0.755517</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>household_size_desc</td>\n",
+       "      <td>0.754218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>kid_category_desc</td>\n",
+       "      <td>0.618701</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>marital_status_code</td>\n",
+       "      <td>0.500125</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Feature Id  Importances\n",
+       "0                   user_item_freq    11.806684\n",
+       "1   user_item_quantity_per_baskter     9.220793\n",
+       "2            user_item_total_sales     6.785993\n",
+       "3           total_item_sales_value     6.720561\n",
+       "4                        item_freq     5.708848\n",
+       "5                   commodity_desc     5.316249\n",
+       "6      user_item_quantity_per_week     4.872310\n",
+       "7                          user_id     4.562465\n",
+       "8         user_item_total_quantity     4.177230\n",
+       "9           item_quantity_per_week     3.422991\n",
+       "10          total_user_sales_value     3.333841\n",
+       "11                         item_id     3.253300\n",
+       "12              sub_commodity_desc     3.207282\n",
+       "13            total_quantity_value     3.128587\n",
+       "14                       user_freq     2.729735\n",
+       "15                    manufacturer     2.503697\n",
+       "16                      department     2.361927\n",
+       "17            item_freq_per_basket     2.303468\n",
+       "18          user_quantity_per_week     2.052122\n",
+       "19        item_quantity_per_basket     2.016049\n",
+       "20            curr_size_of_product     1.940334\n",
+       "21                     income_desc     1.055006\n",
+       "22                        age_desc     1.044350\n",
+       "23                    hh_comp_desc     1.032909\n",
+       "24            user_freq_per_basket     1.020646\n",
+       "25                           brand     0.956119\n",
+       "26       user_quantity_per_baskter     0.837939\n",
+       "27                  homeowner_desc     0.755517\n",
+       "28             household_size_desc     0.754218\n",
+       "29               kid_category_desc     0.618701\n",
+       "30             marital_status_code     0.500125"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.get_feature_importance(prettified=True).sort_values(by='Importances', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f61ca942-c22a-41bf-9968-2e3c6175957e",
+   "metadata": {},
+   "source": [
+    "We can see that paired user-item features has best feature importance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f61f4847-9833-4b75-81d6-274c8c85aa0e",
    "metadata": {},
    "outputs": [],
    "source": []
