feature importance and relearn

--- a/train.ipynb
+++ b/train.ipynb
@@ -833,7 +833,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cfd2886008d74260868b3806a7d730b2",
+       "model_id": "bdb6f2b5ab754657a4e6110360d62849",
        "version_major": 2,
        "version_minor": 0
       },
@@ -847,7 +847,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "efe6246238714201b0425a9375e2ff0b",
+       "model_id": "46f693729d134562af9a72ee1867a38f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -971,8 +971,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 20s, sys: 1.16 s, total: 1min 22s\n",
-      "Wall time: 25.5 s\n"
+      "CPU times: user 1min 21s, sys: 798 ms, total: 1min 21s\n",
+      "Wall time: 24.8 s\n"
      ]
     }
    ],
@@ -1033,8 +1033,8 @@
        "      <td>1</td>\n",
        "      <td>[829323, 835108, 836423, 851515, 875240, 87737...</td>\n",
        "      <td>[856942, 9297615, 5577022, 877391, 9655212, 88...</td>\n",
-       "      <td>[10121739, 1007512, 5577022, 9297615, 9803545,...</td>\n",
-       "      <td>[959455, 1037332, 883616, 908312, 856942, 9202...</td>\n",
+       "      <td>[824758, 1007512, 5577022, 9297615, 1117824, 1...</td>\n",
+       "      <td>[5569374, 841584, 6533936, 885290, 1094924, 82...</td>\n",
        "      <td>[1029743, 1106523, 5569230, 916122, 844179, 11...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1042,8 +1042,8 @@
        "      <td>2</td>\n",
        "      <td>[895388, 8357614, 12301772, 821083, 828106, 83...</td>\n",
        "      <td>[1103898, 911974, 1076580, 5567582, 1056620, 9...</td>\n",
-       "      <td>[1044078, 8090509, 5569845, 985999, 819978, 88...</td>\n",
-       "      <td>[5569230, 1051211, 1102067, 1029743, 12262832,...</td>\n",
+       "      <td>[1044078, 8090537, 5569845, 985999, 819978, 88...</td>\n",
+       "      <td>[1017369, 866211, 916122, 1004906, 849870, 110...</td>\n",
        "      <td>[1029743, 1106523, 5569230, 916122, 844179, 11...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1060,12 +1060,12 @@
        "1  [1103898, 911974, 1076580, 5567582, 1056620, 9...   \n",
        "\n",
        "                                        sim_item_rec  \\\n",
-       "0  [10121739, 1007512, 5577022, 9297615, 9803545,...   \n",
-       "1  [1044078, 8090509, 5569845, 985999, 819978, 88...   \n",
+       "0  [824758, 1007512, 5577022, 9297615, 1117824, 1...   \n",
+       "1  [1044078, 8090537, 5569845, 985999, 819978, 88...   \n",
        "\n",
        "                                             als_rec  \\\n",
-       "0  [959455, 1037332, 883616, 908312, 856942, 9202...   \n",
-       "1  [5569230, 1051211, 1102067, 1029743, 12262832,...   \n",
+       "0  [5569374, 841584, 6533936, 885290, 1094924, 82...   \n",
+       "1  [1017369, 866211, 916122, 1004906, 849870, 110...   \n",
        "\n",
        "                                             top_rec  \n",
        "0  [1029743, 1106523, 5569230, 916122, 844179, 11...  \n",
@@ -1134,9 +1134,9 @@
      "data": {
       "text/plain": [
        "[('own_rec', 0.06350702403477008),\n",
-       " ('als_rec', 0.046970428523642006),\n",
+       " ('als_rec', 0.045731579429259955),\n",
        " ('top_rec', 0.04278333356137788),\n",
-       " ('sim_item_rec', 0.03406394753010391)]"
+       " ('sim_item_rec', 0.03439665638829879)]"
       ]
      },
      "execution_count": 27,
@@ -1184,8 +1184,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 50.6 s, sys: 303 ms, total: 50.9 s\n",
-      "Wall time: 51.1 s\n"
+      "CPU times: user 50.7 s, sys: 223 ms, total: 50.9 s\n",
+      "Wall time: 50.9 s\n"
      ]
     }
    ],
@@ -1248,8 +1248,8 @@
        "      <td>1</td>\n",
        "      <td>[829323, 835108, 836423, 851515, 875240, 87737...</td>\n",
        "      <td>[856942, 9297615, 5577022, 877391, 9655212, 88...</td>\n",
-       "      <td>[10121739, 1007512, 5577022, 9297615, 9803545,...</td>\n",
-       "      <td>[959455, 1037332, 883616, 908312, 856942, 9202...</td>\n",
+       "      <td>[824758, 1007512, 5577022, 9297615, 1117824, 1...</td>\n",
+       "      <td>[5569374, 841584, 6533936, 885290, 1094924, 82...</td>\n",
        "      <td>[1029743, 1106523, 5569230, 916122, 844179, 11...</td>\n",
        "      <td>[856942, 9297615, 5577022, 877391, 9655212, 88...</td>\n",
        "      <td>[856942, 9297615, 5577022, 877391, 9655212, 88...</td>\n",
@@ -1266,8 +1266,8 @@
        "      <td>2</td>\n",
        "      <td>[895388, 8357614, 12301772, 821083, 828106, 83...</td>\n",
        "      <td>[1103898, 911974, 1076580, 5567582, 1056620, 9...</td>\n",
-       "      <td>[1044078, 8090509, 5569845, 985999, 819978, 88...</td>\n",
-       "      <td>[5569230, 1051211, 1102067, 1029743, 12262832,...</td>\n",
+       "      <td>[1044078, 8090537, 5569845, 985999, 819978, 88...</td>\n",
+       "      <td>[1017369, 866211, 916122, 1004906, 849870, 110...</td>\n",
        "      <td>[1029743, 1106523, 5569230, 916122, 844179, 11...</td>\n",
        "      <td>[1103898, 911974, 1076580, 5567582, 1056620, 9...</td>\n",
        "      <td>[1103898, 911974, 1076580, 5567582, 1056620, 9...</td>\n",
@@ -1293,12 +1293,12 @@
        "1  [1103898, 911974, 1076580, 5567582, 1056620, 9...   \n",
        "\n",
        "                                        sim_item_rec  \\\n",
-       "0  [10121739, 1007512, 5577022, 9297615, 9803545,...   \n",
-       "1  [1044078, 8090509, 5569845, 985999, 819978, 88...   \n",
+       "0  [824758, 1007512, 5577022, 9297615, 1117824, 1...   \n",
+       "1  [1044078, 8090537, 5569845, 985999, 819978, 88...   \n",
        "\n",
        "                                             als_rec  \\\n",
-       "0  [959455, 1037332, 883616, 908312, 856942, 9202...   \n",
-       "1  [5569230, 1051211, 1102067, 1029743, 12262832,...   \n",
+       "0  [5569374, 841584, 6533936, 885290, 1094924, 82...   \n",
+       "1  [1017369, 866211, 916122, 1004906, 849870, 110...   \n",
        "\n",
        "                                             top_rec  \\\n",
        "0  [1029743, 1106523, 5569230, 916122, 844179, 11...   \n",
@@ -1522,8 +1522,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.92 s, sys: 54.3 ms, total: 5.97 s\n",
-      "Wall time: 6.02 s\n"
+      "CPU times: user 5.72 s, sys: 25.2 ms, total: 5.75 s\n",
+      "Wall time: 5.75 s\n"
      ]
     }
    ],
@@ -2088,8 +2088,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 32.9 s, sys: 488 ms, total: 33.4 s\n",
-      "Wall time: 4.64 s\n"
+      "CPU times: user 33.1 s, sys: 486 ms, total: 33.5 s\n",
+      "Wall time: 4.55 s\n"
      ]
     }
    ],
@@ -2253,8 +2253,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.19 s, sys: 407 ms, total: 5.6 s\n",
-      "Wall time: 5.63 s\n"
+      "CPU times: user 5.16 s, sys: 422 ms, total: 5.58 s\n",
+      "Wall time: 5.6 s\n"
      ]
     }
    ],
@@ -2435,8 +2435,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 37min 31s, sys: 28.6 s, total: 38min\n",
-      "Wall time: 6min 4s\n"
+      "CPU times: user 37min 41s, sys: 26.3 s, total: 38min 7s\n",
+      "Wall time: 5min 43s\n"
      ]
     }
    ],
@@ -2942,7 +2942,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a9e4e0b0d014606ad3a0e3054b4fc80",
+       "model_id": "27a8269e4c914a5e9d66bf225ead2569",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2957,8 +2957,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 28min 4s, sys: 29.5 s, total: 28min 33s\n",
-      "Wall time: 4min 30s\n"
+      "CPU times: user 28min 10s, sys: 28.7 s, total: 28min 39s\n",
+      "Wall time: 4min 26s\n"
      ]
     }
    ],
@@ -3075,7 +3075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 81,
    "id": "66215537-771e-4b09-8f73-6fdd5fc57d57",
    "metadata": {},
    "outputs": [
@@ -3299,7 +3299,7 @@
        "30             marital_status_code     0.500125"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
