--- a/train.ipynb
+++ b/train.ipynb
@@ -833,7 +833,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bdb6f2b5ab754657a4e6110360d62849",
+       "model_id": "e526d4f294764eaba64595448b53c216",
        "version_major": 2,
        "version_minor": 0
       },
@@ -847,7 +847,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46f693729d134562af9a72ee1867a38f",
+       "model_id": "a92f8718fd1645e98440963ec8021f04",
        "version_major": 2,
        "version_minor": 0
       },
@@ -971,8 +971,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 21s, sys: 798 ms, total: 1min 21s\n",
-      "Wall time: 24.8 s\n"
+      "CPU times: user 1min 22s, sys: 1.11 s, total: 1min 23s\n",
+      "Wall time: 26 s\n"
      ]
     }
    ],
@@ -1033,8 +1033,8 @@
        "      <td>1</td>\n",
        "      <td>[829323, 835108, 836423, 851515, 875240, 87737...</td>\n",
        "      <td>[856942, 9297615, 5577022, 877391, 9655212, 88...</td>\n",
-       "      <td>[824758, 1007512, 5577022, 9297615, 1117824, 1...</td>\n",
-       "      <td>[5569374, 841584, 6533936, 885290, 1094924, 82...</td>\n",
+       "      <td>[842762, 1007512, 1010578, 12352248, 9803545, ...</td>\n",
+       "      <td>[1062572, 1029272, 885290, 1003649, 824180, 85...</td>\n",
        "      <td>[1029743, 1106523, 5569230, 916122, 844179, 11...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1042,8 +1042,8 @@
        "      <td>2</td>\n",
        "      <td>[895388, 8357614, 12301772, 821083, 828106, 83...</td>\n",
        "      <td>[1103898, 911974, 1076580, 5567582, 1056620, 9...</td>\n",
-       "      <td>[1044078, 8090537, 5569845, 985999, 819978, 88...</td>\n",
-       "      <td>[1017369, 866211, 916122, 1004906, 849870, 110...</td>\n",
+       "      <td>[1044078, 8090537, 1029743, 985999, 819978, 84...</td>\n",
+       "      <td>[1102067, 9881593, 932863, 862070, 911974, 556...</td>\n",
        "      <td>[1029743, 1106523, 5569230, 916122, 844179, 11...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1060,12 +1060,12 @@
        "1  [1103898, 911974, 1076580, 5567582, 1056620, 9...   \n",
        "\n",
        "                                        sim_item_rec  \\\n",
-       "0  [824758, 1007512, 5577022, 9297615, 1117824, 1...   \n",
-       "1  [1044078, 8090537, 5569845, 985999, 819978, 88...   \n",
+       "0  [842762, 1007512, 1010578, 12352248, 9803545, ...   \n",
+       "1  [1044078, 8090537, 1029743, 985999, 819978, 84...   \n",
        "\n",
        "                                             als_rec  \\\n",
-       "0  [5569374, 841584, 6533936, 885290, 1094924, 82...   \n",
-       "1  [1017369, 866211, 916122, 1004906, 849870, 110...   \n",
+       "0  [1062572, 1029272, 885290, 1003649, 824180, 85...   \n",
+       "1  [1102067, 9881593, 932863, 862070, 911974, 556...   \n",
        "\n",
        "                                             top_rec  \n",
        "0  [1029743, 1106523, 5569230, 916122, 844179, 11...  \n",
@@ -1134,9 +1134,9 @@
      "data": {
       "text/plain": [
        "[('own_rec', 0.06350702403477008),\n",
-       " ('als_rec', 0.045731579429259955),\n",
+       " ('als_rec', 0.046685499689841585),\n",
        " ('top_rec', 0.04278333356137788),\n",
-       " ('sim_item_rec', 0.03439665638829879)]"
+       " ('sim_item_rec', 0.03428109360998257)]"
       ]
      },
      "execution_count": 27,
@@ -1184,8 +1184,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 50.7 s, sys: 223 ms, total: 50.9 s\n",
-      "Wall time: 50.9 s\n"
+      "CPU times: user 52.3 s, sys: 502 ms, total: 52.8 s\n",
+      "Wall time: 53.3 s\n"
      ]
     }
    ],
@@ -1248,8 +1248,8 @@
        "      <td>1</td>\n",
        "      <td>[829323, 835108, 836423, 851515, 875240, 87737...</td>\n",
        "      <td>[856942, 9297615, 5577022, 877391, 9655212, 88...</td>\n",
-       "      <td>[824758, 1007512, 5577022, 9297615, 1117824, 1...</td>\n",
-       "      <td>[5569374, 841584, 6533936, 885290, 1094924, 82...</td>\n",
+       "      <td>[842762, 1007512, 1010578, 12352248, 9803545, ...</td>\n",
+       "      <td>[1062572, 1029272, 885290, 1003649, 824180, 85...</td>\n",
        "      <td>[1029743, 1106523, 5569230, 916122, 844179, 11...</td>\n",
        "      <td>[856942, 9297615, 5577022, 877391, 9655212, 88...</td>\n",
        "      <td>[856942, 9297615, 5577022, 877391, 9655212, 88...</td>\n",
@@ -1266,8 +1266,8 @@
        "      <td>2</td>\n",
        "      <td>[895388, 8357614, 12301772, 821083, 828106, 83...</td>\n",
        "      <td>[1103898, 911974, 1076580, 5567582, 1056620, 9...</td>\n",
-       "      <td>[1044078, 8090537, 5569845, 985999, 819978, 88...</td>\n",
-       "      <td>[1017369, 866211, 916122, 1004906, 849870, 110...</td>\n",
+       "      <td>[1044078, 8090537, 1029743, 985999, 819978, 84...</td>\n",
+       "      <td>[1102067, 9881593, 932863, 862070, 911974, 556...</td>\n",
        "      <td>[1029743, 1106523, 5569230, 916122, 844179, 11...</td>\n",
        "      <td>[1103898, 911974, 1076580, 5567582, 1056620, 9...</td>\n",
        "      <td>[1103898, 911974, 1076580, 5567582, 1056620, 9...</td>\n",
@@ -1293,12 +1293,12 @@
        "1  [1103898, 911974, 1076580, 5567582, 1056620, 9...   \n",
        "\n",
        "                                        sim_item_rec  \\\n",
-       "0  [824758, 1007512, 5577022, 9297615, 1117824, 1...   \n",
-       "1  [1044078, 8090537, 5569845, 985999, 819978, 88...   \n",
+       "0  [842762, 1007512, 1010578, 12352248, 9803545, ...   \n",
+       "1  [1044078, 8090537, 1029743, 985999, 819978, 84...   \n",
        "\n",
        "                                             als_rec  \\\n",
-       "0  [5569374, 841584, 6533936, 885290, 1094924, 82...   \n",
-       "1  [1017369, 866211, 916122, 1004906, 849870, 110...   \n",
+       "0  [1062572, 1029272, 885290, 1003649, 824180, 85...   \n",
+       "1  [1102067, 9881593, 932863, 862070, 911974, 556...   \n",
        "\n",
        "                                             top_rec  \\\n",
        "0  [1029743, 1106523, 5569230, 916122, 844179, 11...   \n",
@@ -1522,8 +1522,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.72 s, sys: 25.2 ms, total: 5.75 s\n",
-      "Wall time: 5.75 s\n"
+      "CPU times: user 5.79 s, sys: 46.8 ms, total: 5.84 s\n",
+      "Wall time: 5.89 s\n"
      ]
     }
    ],
@@ -2088,8 +2088,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 33.1 s, sys: 486 ms, total: 33.5 s\n",
-      "Wall time: 4.55 s\n"
+      "CPU times: user 37.3 s, sys: 1.07 s, total: 38.4 s\n",
+      "Wall time: 6.77 s\n"
      ]
     }
    ],
@@ -2253,8 +2253,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.16 s, sys: 422 ms, total: 5.58 s\n",
-      "Wall time: 5.6 s\n"
+      "CPU times: user 5.34 s, sys: 407 ms, total: 5.75 s\n",
+      "Wall time: 5.93 s\n"
      ]
     }
    ],
@@ -2435,8 +2435,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 37min 41s, sys: 26.3 s, total: 38min 7s\n",
-      "Wall time: 5min 43s\n"
+      "CPU times: user 38min 14s, sys: 33.5 s, total: 38min 47s\n",
+      "Wall time: 6min 8s\n"
      ]
     }
    ],
@@ -2942,7 +2942,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27a8269e4c914a5e9d66bf225ead2569",
+       "model_id": "77e1150ca8a04e5ba83cfba1adf1beef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2957,8 +2957,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 28min 10s, sys: 28.7 s, total: 28min 39s\n",
-      "Wall time: 4min 26s\n"
+      "CPU times: user 28min 21s, sys: 33.8 s, total: 28min 55s\n",
+      "Wall time: 4min 40s\n"
      ]
     }
    ],
